main.css
/* http://meyerweb.com/eric/tools/css/reset/
   v2.0 | 20110126
   License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed,
figure, figcaption, footer, header, hgroup,
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
  margin: 0;
  padding: 0;
  border: 0;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure,
footer, header, hgroup, menu, nav, section {
  display: block;
}
body {
  line-height: 1;
}
ol, ul {
  list-style: none;
}
blockquote, q {
  quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
  content: '';
  content: none;
}
table {
  border-collapse: collapse;
  border-spacing: 0;
}

html, body
{
  height: 100%;
  overflow: hidden;
}

@import url(http://fonts.googleapis.com/css?family=Roboto+Condensed:300italic,700,300);

body
{
  font-family: 'Roboto Condensed', sans-serif;
  font-weight: 300;
}

em
{
  font-style: italic;
}

a, a:hover, a:visited
{
  color: inherit;
}

a.button
{
  display: inline-block;
  background-color: #EEE;
  color: #333;
  padding: 4px 5px 0px 5px;
  font-weight: 700;
  text-decoration: none;
}

a.button:hover
{
  background-color: #F0F;
}

a.button:active
{
  background-color: #0FF;
}

#render-container
{
  width: 100%;
  min-height: 100%;
  overflow: hidden;
  position: absolute;
  top: 0;
  left: 0;
  z-index: 0;
}

#controls
{
  width: 100%;
  height: 2em;
  position:absolute;
  bottom: 0;
  left: 0;
  z-index: 1;
  background-color: #333;
  color: #EEE;

  box-shadow: 0px 6px 3px -2px #000 inset;
}

#controls h1, #controls img
{
  display: inline;
}

#controls .col
{
  margin: 0.5em;
}
#controls img
{
  height: 0.75em;
}

.col
{
  clear: none;
}

.col.left
{
  float: left;
}

.col.right
{
  float: right;
}

